--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "node-forge": "^0.10.0",
     "popper.js": "^1.16.1",
     "tilt.js": "^1.2.1"
   }
